--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 
 	<ul class="todolists">
 		<li class="todolists__item">
-			<h4 class="todolists__item-title">TodoList1</h4>
+			<div class="todolists__item-header">
+				<h4 class="todolists__item-title">TodoList1111111111111111111111111111111</h4>
+				<button class="todolists__item-btn_delete">&#10006;</button>
+			</div>
 			<div class="todolists__item-adding adding">
 				<input class="adding__input" type="text" placeholder="Add task">
 				<button class="adding__btn">+</button>
@@ -25,7 +28,152 @@
 				<li class="tasks__item">
 					<input class="tasks__item-checkbox" type="checkbox">
 					<h4 class="tasks__item-title">Task 1</h4>
-					<button class="tasks__item-btn">x</button>
+					<button class="tasks__item-btn">&#10006;</button>
+				</li>
+				<li class="tasks__item">
+					<input class="tasks__item-checkbox" type="checkbox">
+					<h4 class="tasks__item-title">Task 11111111111111111111111111111111</h4>
+					<button class="tasks__item-btn">&#10006;</button>
+				</li>
+				<li class="tasks__item">
+					<input class="tasks__item-checkbox" type="checkbox">
+					<h4 class="tasks__item-title">Task 11111111111111111111111111111111</h4>
+					<button class="tasks__item-btn">&#10006;</button>
+				</li>
+				<li class="tasks__item">
+					<input class="tasks__item-checkbox" type="checkbox">
+					<h4 class="tasks__item-title">Task 11111111111111111111111111111111</h4>
+					<button class="tasks__item-btn">&#10006;</button>
+				</li>
+				<li class="tasks__item">
+					<input class="tasks__item-checkbox" type="checkbox">
+					<h4 class="tasks__item-title">Task 11111111111111111111111111111111</h4>
+					<button class="tasks__item-btn">&#10006;</button>
+				</li>
+				<li class="tasks__item">
+					<input class="tasks__item-checkbox" type="checkbox">
+					<h4 class="tasks__item-title">Task 11111111111111111111111111111111</h4>
+					<button class="tasks__item-btn">&#10006;</button>
+				</li>
+				<li class="tasks__item">
+					<input class="tasks__item-checkbox" type="checkbox">
+					<h4 class="tasks__item-title">Task 11111111111111111111111111111111</h4>
+					<button class="tasks__item-btn">&#10006;</button>
+				</li>
+				<li class="tasks__item">
+					<input class="tasks__item-checkbox" type="checkbox">
+					<h4 class="tasks__item-title">Task 11111111111111111111111111111111</h4>
+					<button class="tasks__item-btn">&#10006;</button>
+				</li>
+			</ul>
+			<div class="todolists__item-buttons">
+				<button class="todolists__item-btn todolists__item-btn_active">active</button>
+				<button class="todolists__item-btn todolists__item-btn_completed">completed</button>
+				<button class="todolists__item-btn">all</button>
+			</div>
+		</li>
+		<li class="todolists__item">
+			<div class="todolists__item-header">
+				<h4 class="todolists__item-title">TodoList1111111111111111111111111111111</h4>
+				<button class="todolists__item-btn_delete">&#10006;</button>
+			</div>
+			<div class="todolists__item-adding adding">
+				<input class="adding__input" type="text" placeholder="Add task">
+				<button class="adding__btn">+</button>
+			</div>
+			<div class="todolists__item-tasks tasks">
+				<div class="tasks__item">
+					<input class="tasks__item-checkbox" type="checkbox">
+					<h4 class="tasks__item-title">Task 11111111111111111111111111111111</h4>
+					<button class="tasks__item-btn">&#10006;</button>
+				</div>
+			</div>
+			<div class="todolists__item-buttons">
+				<button class="todolists__item-btn todolists__item-btn_active">active</button>
+				<button class="todolists__item-btn todolists__item-btn_completed">completed</button>
+				<button class="todolists__item-btn">all</button>
+			</div>
+		</li>
+		<li class="todolists__item">
+			<div class="todolists__item-header">
+				<h4 class="todolists__item-title">TodoList1111111111111111111111111111111</h4>
+				<button class="todolists__item-btn_delete">&#10006;</button>
+			</div>
+			<div class="todolists__item-adding adding">
+				<input class="adding__input" type="text" placeholder="Add task">
+				<button class="adding__btn">+</button>
+			</div>
+			<ul class="todolists__item-tasks tasks">
+				<li class="tasks__item">
+					<input class="tasks__item-checkbox" type="checkbox">
+					<h4 class="tasks__item-title">Task 11111111111111111111111111111111</h4>
+					<button class="tasks__item-btn">&#10006;</button>
+				</li>
+			</ul>
+			<div class="todolists__item-buttons">
+				<button class="todolists__item-btn todolists__item-btn_active">active</button>
+				<button class="todolists__item-btn todolists__item-btn_completed">completed</button>
+				<button class="todolists__item-btn">all</button>
+			</div>
+		</li>
+		<li class="todolists__item">
+			<div class="todolists__item-header">
+				<h4 class="todolists__item-title">TodoList1111111111111111111111111111111</h4>
+				<button class="todolists__item-btn_delete">&#10006;</button>
+			</div>
+			<div class="todolists__item-adding adding">
+				<input class="adding__input" type="text" placeholder="Add task">
+				<button class="adding__btn">+</button>
+			</div>
+			<ul class="todolists__item-tasks tasks">
+				<li class="tasks__item">
+					<input class="tasks__item-checkbox" type="checkbox">
+					<h4 class="tasks__item-title">Task 11111111111111111111111111111111</h4>
+					<button class="tasks__item-btn">&#10006;</button>
+				</li>
+			</ul>
+			<div class="todolists__item-buttons">
+				<button class="todolists__item-btn todolists__item-btn_active">active</button>
+				<button class="todolists__item-btn todolists__item-btn_completed">completed</button>
+				<button class="todolists__item-btn">all</button>
+			</div>
+		</li>
+		<li class="todolists__item">
+			<div class="todolists__item-header">
+				<h4 class="todolists__item-title">TodoList1111111111111111111111111111111</h4>
+				<button class="todolists__item-btn_delete">&#10006;</button>
+			</div>
+			<div class="todolists__item-adding adding">
+				<input class="adding__input" type="text" placeholder="Add task">
+				<button class="adding__btn">+</button>
+			</div>
+			<ul class="todolists__item-tasks tasks">
+				<li class="tasks__item">
+					<input class="tasks__item-checkbox" type="checkbox">
+					<h4 class="tasks__item-title">Task 11111111111111111111111111111111</h4>
+					<button class="tasks__item-btn">&#10006;</button>
+				</li>
+			</ul>
+			<div class="todolists__item-buttons">
+				<button class="todolists__item-btn todolists__item-btn_active">active</button>
+				<button class="todolists__item-btn todolists__item-btn_completed">completed</button>
+				<button class="todolists__item-btn">all</button>
+			</div>
+		</li>
+		<li class="todolists__item">
+			<div class="todolists__item-header">
+				<h4 class="todolists__item-title">TodoList1111111111111111111111111111111</h4>
+				<button class="todolists__item-btn_delete">&#10006;</button>
+			</div>
+			<div class="todolists__item-adding adding">
+				<input class="adding__input" type="text" placeholder="Add task">
+				<button class="adding__btn">+</button>
+			</div>
+			<ul class="todolists__item-tasks tasks">
+				<li class="tasks__item">
+					<input class="tasks__item-checkbox" type="checkbox">
+					<h4 class="tasks__item-title">Task 11111111111111111111111111111111</h4>
+					<button class="tasks__item-btn">&#10006;</button>
 				</li>
 			</ul>
 			<div class="todolists__item-buttons">
