--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header class="header"></header>
-<section class="content">
+<section id="content" class="content">
 	<div class="content__adding adding">
 		<input id="add__todolist-input" class="adding__input" type="text" placeholder="Add todolist">
 		<button id="add__todolist-btn" class="adding__btn">+</button>
