added functions for tl and task

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>TodoList</title>
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/classes.css">
+	<link rel="stylesheet" href="css/todolist.css">
+	<link rel="stylesheet" href="css/task.css">
 	<script defer src="js/app.js"></script>
 </head>
 <body>
@@ -14,7 +16,6 @@
 		<input id="add__todolist-input" class="adding__input" type="text" placeholder="Add todolist">
 		<button id="add__todolist-btn" class="adding__btn">+</button>
 	</div>
-
 	<ul id="todolist" class="todolist">
 <!--		<li class="todolist__item">-->
 <!--			<div class="todolists__item-header">-->
@@ -39,7 +40,6 @@
 <!--			</div>-->
 <!--		</li>-->
 	</ul>
-
 </section>
 </body>
 </html>
